# AugmentedTradeTech

./: .gitignore  AugmentedTradeTech_Build_Prompts_v1.0.docx  AugmentedTradeTech_Product_Specification_v1.7_1.docx  docker-compose.yml  package-lock.json  package.json  sst.config.ts  tsconfig.json  ~$gmentedTradeTech_Build_Prompts_v1.0.docx
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: database.py  workflows.py
apps/api/app/cron/: heartbeat.py  loyalty_expiry.py  membership_reminder.py  qbo_sync_worker.py  sync_queue_worker.py
apps/api/app/models/: ai.py  auth.py  base.py  company.py  customer.py  dispatch.py  invoice.py  job.py  loyalty.py  membership.py  sync.py  user.py
apps/api/app/routers/: ai.py  auth.py  customers.py  dispatch.py  invoices.py  jobs.py  loyalty.py  me.py  membership_plans.py  memberships.py  onboarding.py  portal.py  qbo.py  sync.py  techs.py  users.py
apps/api/app/services/: diagnosis_pipeline.py  loyalty.py  qbo.py
apps/api/scratch/: check_col.py  seed_demo.py  verify_db.py
apps/api/tests/: test_ai_analysis.py  test_auth.py  test_availability.py  test_diagnosis_pipeline.py  test_dispatch.py  test_invoices.py  test_jobs.py  test_loyalty.py  test_memberships.py  test_onboarding.py  test_portal.py  test_qbo.py  test_rls.py  test_senior_tech_chat.py  test_sync.py  test_tech_home.py  test_users.py  test_workflow.py
apps/web/: next.config.ts  package.json
apps/web/public/: manifest.json  sw.js  (+1 more)
infra/: api.ts  database.ts  queue.ts  storage.ts  web.ts
test-results/: .last-run.json
(+45 files in other folders)
